<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wf_main_activity" >

    <LinearLayout
        android:id="@+id/wf_main_yiemian"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wf_title_b" >

            <TextView
                style="@style/wf_title_textview"
                android:text="@string/wf_yirongjinrong" />

            <ImageView
                android:id="@+id/wf_main_caidan_button"
                style="@style/wf_title_imageview"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/wf_ic_item" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/wf_main_textview_shouye"
                style="@style/wf_shouye_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_alignBottom="@id/wf_main_textview_shouye"
                android:layout_alignLeft="@id/wf_main_textview_shouye"
                android:layout_alignRight="@id/wf_main_textview_shouye"
                android:background="#548B54" />
        </RelativeLayout>

        <TextView style="@style/wf_hengxian" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="300dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@drawable/wf_yirongjinrong_text" />

                <LinearLayout style="@style/wf_item_horizontal" >

                    <LinearLayout
                        android:id="@+id/ll_kuakatongdao"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_kuakatongdao" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_kuaikatongdao" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_yijiantie"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_yijiantie" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_yijiantie" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_bankajindu"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_bankajindu" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_bankajindu" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/wf_item_horizontal" >

                    <LinearLayout
                        android:id="@+id/ll_wangluoxiaodai"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_wangluoxiaodai" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_wangluoxiaodai" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_guanfangwangzhan"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_guanfangwangzhan" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_guanfangwangzhan" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_jishujiemi"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_jishujiemi" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_jishujiemi" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/wf_item_horizontal" >

                    <LinearLayout
                        android:id="@+id/ll_zhengxinchaxun"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_zhengxinchaxun" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_zhengxinchaxun" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_gerenzhongxin"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_gerenzhongxin" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_gerenzhongxin" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_chanpinjieshao"
                        style="@style/wf_item_vertical" >

                        <ImageView
                            style="@style/wf_item_imageview"
                            android:src="@drawable/wf_chanpinjieshao" />

                        <TextView
                            style="@style/wf_item_textview"
                            android:text="@string/wf_chanpinjieshao" />
                    </LinearLayout>
                </LinearLayout>

                <TextView style="@style/wf_hengxian" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/wf_rl_caidan"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#1C1C1C" >

        <ListView
            android:id="@+id/wf_listview_caidan"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>