<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
          <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wf_title_b" >

            <TextView
                style="@style/wf_title_textview"
                android:text="@string/jindu" />

            <ImageView
                style="@style/wf_title_imageview"
                android:src="@drawable/wf_ic_item" />
            <ImageView
            android:id="@+id/bt_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/lkw_return" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/wf_main_textview_shouye"
                style="@style/wf_shouye_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_alignBottom="@id/wf_main_textview_shouye"
                android:layout_alignLeft="@id/wf_main_textview_shouye"
                android:layout_alignRight="@id/wf_main_textview_shouye"
                android:background="#548B54" />
        </RelativeLayout>

        <TextView style="@style/wf_hengxian" />

        <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@drawable/wf_yirongjinrong_text" />
        <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TableRow 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/bt_1"
                android:src="@drawable/yqj_zhongxin"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                />
            <ImageView 
                android:id="@+id/bt_2"
                android:src="@drawable/yqj_zhaoshang"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
            <ImageView
                 android:id="@+id/bt_3" 
                android:src="@drawable/hwh_guangda"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
                 </TableRow>
             <TableRow 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 >
                  <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/zhongxin_bank"/>
                 <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/zhaoshang_bank"/>
                 <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/guangda_bank"/>
             </TableRow>
                
             </TableLayout>
       <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TableRow 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/bt_4"
                android:src="@drawable/yqj_xingye"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                />
            <ImageView 
                android:id="@+id/bt_5"
                android:src="@drawable/yqj_jiaotong"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
            <ImageView
                 android:id="@+id/bt_6" 
                android:src="@drawable/yqj_zhongguo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
                 </TableRow>
             <TableRow 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
                  <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/xingye_bank"/>
                 <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_weight="1"
                     android:textSize="27sp"
                     android:text="@string/jiaotong_bank"/>
                 <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/zhongguo_bank"/>
             </TableRow>
                
             </TableLayout>
            
   <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TableRow 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/bt_7"
                android:src="@drawable/hwh_pingan"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                />
            <ImageView 
                android:id="@+id/bt_8"
                android:src="@drawable/yqj_huaxia"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
            <ImageView
                 android:id="@+id/bt_9" 
                android:src="@drawable/yqj_shanghai"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
                 </TableRow>
             <TableRow 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
                  <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_weight="1"
                     android:textSize="27sp"
                     android:text="@string/pingan_bank"/>
                 <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/huaxia_bank"/>
                 <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/shanghai_bank"/>
             </TableRow>
                
             </TableLayout>
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TableRow 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/bt_10"
                android:src="@drawable/yqj_beijing"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                />
            <ImageView 
                android:id="@+id/bt_11"
                android:src="@drawable/yqj_pufa"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
            <ImageView
                 android:id="@+id/bt_12" 
                android:src="@drawable/yqj_minsheng"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
                 </TableRow>
             <TableRow 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
                  <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/beijing_bank"/>
                 <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/pufa_bank"/>
                 <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="27sp"
                     android:text="@string/minsheng_bank"/>
             </TableRow>
                
             </TableLayout>
             </LinearLayout>
            
            
    

</ScrollView>
